--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Template
 metadata:
   creationTimestamp: null
-  name: nuodb.3.1.0-ee-persistent-3admin-2sm
+  name: nuodb-persisten-storage
   labels:
-    template: nuodb.3.1.0-ee-persistent-3admin-2sm
+    template: nuodb-persisten-storage
   annotations:
     openshift.io/display-name: "NouDB CE (Persistent)"
     description: "NuoDB database service, with persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
@@ -249,8 +249,10 @@ objects:
             - name: ADMIN_NUM
               value: ${ADMIN_COUNT}
           volumeMounts:
-          - mountPath: /opt/nuodb/var/opt
+          - mountPath: /archive
             name: sm-archives-${NODE_REGION}
+          - mountPath: /journal
+            name: sm-journal-${NODE_REGION}
     volumeClaimTemplates:
     - metadata:
         name: sm-archives-${NODE_REGION}
@@ -264,12 +266,21 @@ objects:
         resources:
           requests:
             storage: ${SM_PVC_SIZE}
+    - metadata:
+        name: sm-journal-${NODE_REGION}
+      spec:
+        labels:
+          group: nuodb
+          app: nuodb
+        storageClassName: ${PVC_CLASS_NAME}
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: ${SM_PVC_SIZE}
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
-    annotations:
-      description: "Transaction Engine(TE) pod instance deployment configuration"
-      template.alpha.openshift.io/wait-for-ready: "true"
     labels:
       group: nuodb
       app: nuodb
@@ -362,7 +373,7 @@ parameters:
     value: default
   - name: FIRST_CLUSTER_API
     displayName: Existing NuoDB Admin Service Address
-    description: Join an existing NuoDB cluster
+    description: "Join an existing NuoDB cluster"
     value:
   - name: DB_NAME
     displayName: Database Name
@@ -381,7 +392,7 @@ parameters:
     value: goal!
   - name: ADMIN_SVC_NAME
     displayName: NuoDB Admin Service Name
-    description: "Service Name to Connect to NuoAdmin. Node region will be appended to string"
+    description: "Service Name to Connect to NuoAdmin. Node region parameter will be appended to string"
     required: true
     value: nuodb-svc
   - name: SM_PVC_SIZE
